fixed stuck paginations

--- a/src/layout/homelayout/BizeYazirlar/Yazilar/index.module.scss
+++ b/src/layout/homelayout/BizeYazirlar/Yazilar/index.module.scss
@@ -4,6 +4,10 @@
   .content {
     padding-top: 42px;
 
+    .none {
+      display: none;
+    }
+
     :global {
       .swiper-pagination {
         width: fit-content;
