--- a/src/pages/XeberDetailPage/index.module.scss
+++ b/src/pages/XeberDetailPage/index.module.scss
@@ -14,6 +14,7 @@
     padding: 3rem 0px;
     width: 100%;
     display: flex;
+    align-items: flex-start;
     column-gap: 44px;
 
     @media only screen and (max-width: 992px) {
